--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,8 +4,8 @@
 	"name": "PHP & MariaDB",
 	"dockerComposeFile": "docker-compose.yml",
 	"service": "app",
-	"workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}",
-	"postCreateCommand": "lefthook install",
+	"workspaceFolder": "/workspaces/Marta",
+	"postCreateCommand": "./scripts/setup",
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
