--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,7 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/App/"
+            "App\\": "app/"
         }
     },
     "autoload-dev": {
