Se agrega doctrine ORM

--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,22 +1,26 @@
+version: '3.4'
+
+x-db-variables: &db-variables
+    MYSQL_DATABASE: mariadb
+    MYSQL_USER: mariadb
+    MYSQL_PASSWORD: mariadb
+
 services:
   app:
     build:
       context: .
       dockerfile: Dockerfile
-
     volumes:
       - ..:/workspaces/Marta:cached
       - ./xdebug.ini:/usr/local/etc/php/conf.d/xdebug.ini
       - ./99-overrides.ini:/usr/local/etc/php/conf.d/99-overrides.ini
-
     # Overrides default command so things don't shut down after the process ends.
     command: sleep infinity
-
     # Runs app on the same network as the database container, allows "forwardPorts" in devcontainer.json function.
     network_mode: service:db
-
     # Use "forwardPorts" in **devcontainer.json** to forward an app port locally.
     # (Adding the "ports" property to this file will not forward from a Codespace.)
+    environment: *db-variables
 
   db:
     image: mariadb:10.11.5
@@ -25,9 +29,7 @@ services:
       - mariadb-data:/var/lib/mysql
     environment:
       MYSQL_ROOT_PASSWORD: mariadb
-      MYSQL_DATABASE: mariadb
-      MYSQL_USER: mariadb
-      MYSQL_PASSWORD: mariadb
+      <<: *db-variables
 
     # Add "forwardPorts": ["3306"] to **devcontainer.json** to forward MariaDB locally.
     # (Adding the "ports" property to this file will not forward from a Codespace.)
