--- a/composer.json
+++ b/composer.json
@@ -25,15 +25,20 @@
     "require": {
         "php": "~8.2.0",
         "composer/package-versions-deprecated": "^1.10.99",
+        "doctrine/collections": "^2.1",
+        "doctrine/dbal": "^3.6",
+        "doctrine/migrations": "^3.6",
+        "doctrine/orm": "^2.16",
+        "elie29/zend-phpdi-config": "^6.0 || ^8.0 || ^9.0",
         "laminas/laminas-component-installer": "^2.6 || ^3.0",
         "laminas/laminas-config-aggregator": "^1.6",
         "laminas/laminas-diactoros": "^2.24.2",
         "laminas/laminas-stdlib": "^3.6",
         "mezzio/mezzio": "^3.7",
-        "mezzio/mezzio-helpers": "^5.7",
-        "elie29/zend-phpdi-config": "^6.0 || ^8.0 || ^9.0",
         "mezzio/mezzio-fastroute": "^3.0.3",
-        "mezzio/mezzio-platesrenderer": "^2.2"
+        "mezzio/mezzio-helpers": "^5.7",
+        "mezzio/mezzio-platesrenderer": "^2.2",
+        "symfony/cache": "^6.3"
     },
     "require-dev": {
         "laminas/laminas-development-mode": "^3.3.0",
