--- a/config/autoload/development.local.php.dist
+++ b/config/autoload/development.local.php.dist
@@ -32,4 +32,14 @@ return [
             'ajax_only'  => true,
         ],
     ],
+    'doctrine' => [
+        'connection' => [
+            'params' => [
+                'host'     => 'db',
+                'user'     => getenv('MYSQL_USER'),
+                'password' => getenv('MYSQL_PASSWORD'),
+                'dbname'   => getenv('MYSQL_DATABASE'),
+            ],
+        ],
+    ],
 ];
