--- a/composer.json
+++ b/composer.json
@@ -69,7 +69,7 @@
             "@cs-check",
             "@test"
         ],
-        "clear-config-cache": "php bin/clear-config-cache.php",
+        "clear-config-cache": "php bin/clear-config-cache",
         "enable-codestandard": "Dealerdirect\\Composer\\Plugin\\Installers\\PHPCodeSniffer\\Plugin::run",
         "cs-check": "phpcs",
         "cs-fix": "phpcbf",
