--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,8 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Framework\\": "framework/"
         }
     },
     "autoload-dev": {
