--- a/composer.json
+++ b/composer.json
@@ -38,14 +38,17 @@
         "mezzio/mezzio-fastroute": "^3.10.0",
         "mezzio/mezzio-helpers": "^5.15",
         "mezzio/mezzio-platesrenderer": "^2.9",
+        "nette/schema": "^1.2",
         "symfony/cache": "^6.3.5"
     },
     "require-dev": {
+        "doctrine/sql-formatter": "^1.1",
         "filp/whoops": "^2.15.3",
         "laminas/laminas-development-mode": "^3.11.0",
         "mezzio/mezzio-tooling": "^2.8",
         "phpunit/phpunit": "^10.4.1",
-        "roave/security-advisories": "dev-master"
+        "roave/security-advisories": "dev-master",
+        "symfony/var-dumper": "^6.3"
     },
     "autoload": {
         "psr-4": {
