--- a/composer.json
+++ b/composer.json
@@ -39,16 +39,23 @@
         "mezzio/mezzio-helpers": "^5.15",
         "mezzio/mezzio-platesrenderer": "^2.9",
         "nette/schema": "^1.2",
+        "psr/http-message": "^1.1",
+        "psr/http-server-handler": "^1.0",
+        "psr/http-server-middleware": "^1.0",
         "symfony/cache": "^6.3.5"
     },
     "require-dev": {
         "doctrine/sql-formatter": "^1.1",
         "filp/whoops": "^2.15.3",
         "laminas/laminas-development-mode": "^3.11.0",
+        "lctrs/psalm-psr-container-plugin": "^1.9",
         "mezzio/mezzio-tooling": "^2.8",
         "phpunit/phpunit": "^10.4.1",
+        "psalm/plugin-phpunit": "^0.18.4",
         "roave/security-advisories": "dev-master",
-        "symfony/var-dumper": "^6.3"
+        "symfony/var-dumper": "^6.3",
+        "vimeo/psalm": "^5.15",
+        "weirdan/doctrine-psalm-plugin": "^2.9"
     },
     "autoload": {
         "psr-4": {
