--- a/composer.json
+++ b/composer.json
@@ -1,96 +1,97 @@
 {
-    "name": "iyaki/marta",
-    "description": "Sistema de gestión de finanzas hogareñas compartidas",
-    "type": "project",
-    "config": {
-        "sort-packages": true,
-        "allow-plugins": {
-            "dealerdirect/phpcodesniffer-composer-installer": true,
-            "composer/package-versions-deprecated": true,
-            "laminas/laminas-component-installer": true
-        }
-    },
-    "extra": {
-        "laminas": {
-            "component-whitelist": [
-                "mezzio/mezzio",
-                "mezzio/mezzio-helpers",
-                "mezzio/mezzio-router",
-                "laminas/laminas-httphandlerrunner",
-                "mezzio/mezzio-fastroute",
-                "mezzio/mezzio-platesrenderer"
-            ]
-        }
-    },
-    "require": {
-        "php": "~8.2.0",
-        "ext-mysqli": "*",
-        "ext-pdo_mysql": "*",
-        "composer/package-versions-deprecated": "^1.11.99.5",
-        "doctrine/collections": "^2.1.4",
-        "doctrine/dbal": "^3.7.1",
-        "doctrine/migrations": "^3.6",
-        "doctrine/orm": "^2.16.2",
-        "elie29/zend-phpdi-config": "^9.0.1",
-        "laminas/laminas-component-installer": "^2.6 || ^3.3",
-        "laminas/laminas-config-aggregator": "^1.14",
-        "laminas/laminas-diactoros": "^2.25.2",
-        "laminas/laminas-stdlib": "^3.18",
-        "mezzio/mezzio": "^3.17",
-        "mezzio/mezzio-fastroute": "^3.10.0",
-        "mezzio/mezzio-helpers": "^5.15",
-        "mezzio/mezzio-platesrenderer": "^2.9",
-        "nette/schema": "^1.2",
-        "psr/http-message": "^1.1",
-        "psr/http-server-handler": "^1.0",
-        "psr/http-server-middleware": "^1.0",
-        "symfony/cache": "^6.3.5"
-    },
-    "require-dev": {
-        "doctrine/sql-formatter": "^1.1",
-        "filp/whoops": "^2.15.3",
-        "laminas/laminas-development-mode": "^3.11.0",
-        "lctrs/psalm-psr-container-plugin": "^1.9",
-        "mezzio/mezzio-tooling": "^2.8",
-        "phpunit/phpunit": "^10.4.1",
-        "psalm/plugin-phpunit": "^0.18.4",
-        "roave/security-advisories": "dev-master",
-        "symfony/var-dumper": "^6.3",
-        "vimeo/psalm": "^5.15",
-        "weirdan/doctrine-psalm-plugin": "^2.9"
-    },
-    "autoload": {
-        "psr-4": {
-            "App\\": "app/",
-            "Framework\\": "framework/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "AppTest\\": "test/AppTest/"
-        }
-    },
-    "scripts": {
-        "post-create-project-cmd": [
-            "@development-enable"
-        ],
-        "development-disable": "laminas-development-mode disable",
-        "development-enable": "laminas-development-mode enable",
-        "development-status": "laminas-development-mode status",
-        "mezzio": "laminas --ansi",
-        "check": [
-            "@cs-check",
-            "@test"
-        ],
-        "clear-config-cache": "php bin/clear-config-cache",
-        "enable-codestandard": "Dealerdirect\\Composer\\Plugin\\Installers\\PHPCodeSniffer\\Plugin::run",
-        "cs-check": "phpcs",
-        "cs-fix": "phpcbf",
-        "serve": [
-            "Composer\\Config::disableProcessTimeout",
-            "php -S localhost:8080 -t public/"
-        ],
-        "test": "phpunit --colors=always",
-        "test-coverage": "phpunit --colors=always --coverage-clover clover.xml"
-    }
+	"name": "iyaki/marta",
+	"description": "Sistema de gestión de finanzas hogareñas compartidas",
+	"type": "project",
+	"config": {
+		"sort-packages": true,
+		"allow-plugins": {
+			"dealerdirect/phpcodesniffer-composer-installer": true,
+			"composer/package-versions-deprecated": true,
+			"laminas/laminas-component-installer": true
+		}
+	},
+	"extra": {
+		"laminas": {
+			"component-whitelist": [
+				"mezzio/mezzio",
+				"mezzio/mezzio-helpers",
+				"mezzio/mezzio-router",
+				"laminas/laminas-httphandlerrunner",
+				"mezzio/mezzio-fastroute",
+				"mezzio/mezzio-platesrenderer"
+			]
+		}
+	},
+	"require": {
+		"php": "~8.2.0",
+		"ext-mysqli": "*",
+		"ext-pdo_mysql": "*",
+		"composer/package-versions-deprecated": "^1.11.99.5",
+		"doctrine/collections": "^2.1.4",
+		"doctrine/dbal": "^3.7.1",
+		"doctrine/migrations": "^3.6",
+		"doctrine/orm": "^2.16.2",
+		"elie29/zend-phpdi-config": "^9.0.1",
+		"laminas/laminas-component-installer": "^2.6 || ^3.3",
+		"laminas/laminas-config-aggregator": "^1.14",
+		"laminas/laminas-diactoros": "^2.25.2",
+		"laminas/laminas-stdlib": "^3.18",
+		"mezzio/mezzio": "^3.17",
+		"mezzio/mezzio-fastroute": "^3.10.0",
+		"mezzio/mezzio-helpers": "^5.15",
+		"mezzio/mezzio-platesrenderer": "^2.9",
+		"nette/schema": "^1.2",
+		"psr/http-message": "^1.1",
+		"psr/http-server-handler": "^1.0",
+		"psr/http-server-middleware": "^1.0",
+		"symfony/cache": "^6.3.5"
+	},
+	"require-dev": {
+		"ext-zip": "*",
+		"doctrine/sql-formatter": "^1.1",
+		"filp/whoops": "^2.15.3",
+		"laminas/laminas-development-mode": "^3.11.0",
+		"lctrs/psalm-psr-container-plugin": "^1.9",
+		"mezzio/mezzio-tooling": "^2.8",
+		"phpunit/phpunit": "^10.4.1",
+		"psalm/plugin-phpunit": "^0.18.4",
+		"roave/security-advisories": "dev-master",
+		"symfony/var-dumper": "^6.3",
+		"vimeo/psalm": "^5.15",
+		"weirdan/doctrine-psalm-plugin": "^2.9"
+	},
+	"autoload": {
+		"psr-4": {
+			"App\\": "app/",
+			"Framework\\": "framework/"
+		}
+	},
+	"autoload-dev": {
+		"psr-4": {
+			"AppTest\\": "test/AppTest/"
+		}
+	},
+	"scripts": {
+		"post-create-project-cmd": [
+			"@development-enable"
+		],
+		"development-disable": "laminas-development-mode disable",
+		"development-enable": "laminas-development-mode enable",
+		"development-status": "laminas-development-mode status",
+		"mezzio": "laminas --ansi",
+		"check": [
+			"@cs-check",
+			"@test"
+		],
+		"clear-config-cache": "php bin/clear-config-cache",
+		"enable-codestandard": "Dealerdirect\\Composer\\Plugin\\Installers\\PHPCodeSniffer\\Plugin::run",
+		"cs-check": "phpcs",
+		"cs-fix": "phpcbf",
+		"serve": [
+			"Composer\\Config::disableProcessTimeout",
+			"php -S localhost:8080 -t public/"
+		],
+		"test": "phpunit --colors=always",
+		"test-coverage": "phpunit --colors=always --coverage-clover clover.xml"
+	}
 }
