--- a/composer.json
+++ b/composer.json
@@ -57,8 +57,7 @@
 		"psalm/plugin-phpunit": "^0.18.4",
 		"roave/security-advisories": "dev-master",
 		"symfony/var-dumper": "^6.3",
-		"vimeo/psalm": "^5.15",
-		"weirdan/doctrine-psalm-plugin": "^2.9"
+		"vimeo/psalm": "^5.15"
 	},
 	"autoload": {
 		"psr-4": {
