--- a/composer.json
+++ b/composer.json
@@ -55,6 +55,7 @@
 		"mezzio/mezzio-tooling": "^2.8",
 		"phpunit/phpunit": "^10.4.1",
 		"psalm/plugin-phpunit": "^0.18.4",
+		"rector/rector": "^0.18.5",
 		"roave/security-advisories": "dev-master",
 		"symfony/var-dumper": "^6.3",
 		"vimeo/psalm": "^5.15"
