--- a/composer.json
+++ b/composer.json
@@ -2,26 +2,6 @@
 	"name": "iyaki/marta",
 	"description": "Sistema de gestión de finanzas hogareñas compartidas",
 	"type": "project",
-	"config": {
-		"sort-packages": true,
-		"allow-plugins": {
-			"dealerdirect/phpcodesniffer-composer-installer": true,
-			"composer/package-versions-deprecated": true,
-			"laminas/laminas-component-installer": true
-		}
-	},
-	"extra": {
-		"laminas": {
-			"component-whitelist": [
-				"mezzio/mezzio",
-				"mezzio/mezzio-helpers",
-				"mezzio/mezzio-router",
-				"laminas/laminas-httphandlerrunner",
-				"mezzio/mezzio-fastroute",
-				"mezzio/mezzio-platesrenderer"
-			]
-		}
-	},
 	"require": {
 		"php": "~8.2.0",
 		"ext-mysqli": "*",
@@ -49,6 +29,7 @@
 	"require-dev": {
 		"ext-zip": "*",
 		"doctrine/sql-formatter": "^1.1",
+		"ergebnis/composer-normalize": "^2.39",
 		"filp/whoops": "^2.15.3",
 		"laminas/laminas-development-mode": "^3.11.0",
 		"lctrs/psalm-psr-container-plugin": "^1.9",
@@ -71,22 +52,43 @@
 			"AppTest\\": "test/AppTest/"
 		}
 	},
+	"config": {
+		"allow-plugins": {
+			"composer/package-versions-deprecated": true,
+			"dealerdirect/phpcodesniffer-composer-installer": true,
+			"ergebnis/composer-normalize": true,
+			"laminas/laminas-component-installer": true
+		},
+		"sort-packages": true
+	},
+	"extra": {
+		"laminas": {
+			"component-whitelist": [
+				"mezzio/mezzio",
+				"mezzio/mezzio-helpers",
+				"mezzio/mezzio-router",
+				"laminas/laminas-httphandlerrunner",
+				"mezzio/mezzio-fastroute",
+				"mezzio/mezzio-platesrenderer"
+			]
+		}
+	},
 	"scripts": {
 		"post-create-project-cmd": [
 			"@development-enable"
 		],
-		"development-disable": "laminas-development-mode disable",
-		"development-enable": "laminas-development-mode enable",
-		"development-status": "laminas-development-mode status",
-		"mezzio": "laminas --ansi",
 		"check": [
 			"@cs-check",
 			"@test"
 		],
 		"clear-config-cache": "php bin/clear-config-cache",
-		"enable-codestandard": "Dealerdirect\\Composer\\Plugin\\Installers\\PHPCodeSniffer\\Plugin::run",
 		"cs-check": "phpcs",
 		"cs-fix": "phpcbf",
+		"development-disable": "laminas-development-mode disable",
+		"development-enable": "laminas-development-mode enable",
+		"development-status": "laminas-development-mode status",
+		"enable-codestandard": "Dealerdirect\\Composer\\Plugin\\Installers\\PHPCodeSniffer\\Plugin::run",
+		"mezzio": "laminas --ansi",
 		"serve": [
 			"Composer\\Config::disableProcessTimeout",
 			"php -S localhost:8080 -t public/"
