--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
 		"lctrs/psalm-psr-container-plugin": "^1.9",
 		"mezzio/mezzio-tooling": "^2.8",
 		"phpunit/phpunit": "^10.4.1",
+		"povils/phpmnd": "^3.2",
 		"psalm/plugin-phpunit": "^0.18.4",
 		"rector/rector": "^0.18.5",
 		"roave/security-advisories": "dev-master",
