--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,10 @@
 		"mezzio/mezzio-fastroute": "^3.10.0",
 		"mezzio/mezzio-helpers": "^5.15",
 		"mezzio/mezzio-platesrenderer": "^2.9",
+		"mezzio/mezzio-template": "^2.8",
 		"nette/schema": "^1.2",
+		"php-di/php-di": "^7.0",
+		"psr/container": "^2.0",
 		"psr/http-message": "^1.1",
 		"psr/http-server-handler": "^1.0",
 		"psr/http-server-middleware": "^1.0",
@@ -33,6 +36,7 @@
 		"filp/whoops": "^2.15.3",
 		"laminas/laminas-development-mode": "^3.11.0",
 		"lctrs/psalm-psr-container-plugin": "^1.9",
+		"maglnet/composer-require-checker": "^4.7",
 		"mezzio/mezzio-tooling": "^2.8",
 		"phpunit/phpunit": "^10.4.1",
 		"povils/phpmnd": "^3.2",
