--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
 		"nette/schema": "^1.2",
 		"php-di/php-di": "^7.0",
 		"psr/container": "^2.0",
+		"psr/http-factory": "^1.0",
 		"psr/http-message": "^1.1",
 		"psr/http-server-handler": "^1.0",
 		"psr/http-server-middleware": "^1.0",
@@ -48,7 +49,7 @@
 	},
 	"autoload": {
 		"psr-4": {
-			"Marta\\": "app/",
+			"Marta\\": "app/"
 		}
 	},
 	"autoload-dev": {
