--- a/.editorconfig
+++ b/.editorconfig
@@ -12,7 +12,7 @@ trim_trailing_whitespace = true
 [Dockerfile]
 indent_style = tab
 
-[*.{phtml,js,html,css,json,xml,lock}*]
+[*.{phtml,js,html,css,json,xml,lock,neon}*]
 indent_style = tab
 indent_size = 2
 
