--- a/composer.json
+++ b/composer.json
@@ -39,12 +39,23 @@
 		"lctrs/psalm-psr-container-plugin": "^1.9",
 		"maglnet/composer-require-checker": "^4.7",
 		"mezzio/mezzio-tooling": "^2.8",
+		"phpstan/extension-installer": "^1.3",
+		"phpstan/phpstan": "^1.10",
+		"phpstan/phpstan-deprecation-rules": "^1.1",
+		"phpstan/phpstan-doctrine": "^1.3",
+		"phpstan/phpstan-phpunit": "^1.3",
+		"phpstan/phpstan-strict-rules": "^1.5",
 		"phpunit/phpunit": "^10.4.1",
 		"povils/phpmnd": "^3.2",
 		"psalm/plugin-phpunit": "^0.18.4",
 		"rector/rector": "^0.18.5",
 		"roave/security-advisories": "dev-master",
+		"sidz/phpstan-rules": "^0.4.2",
 		"symfony/var-dumper": "^6.3",
+		"thecodingmachine/phpstan-strict-rules": "^1.0",
+		"tomasvotruba/cognitive-complexity": "^0.2.2",
+		"tomasvotruba/type-coverage": "^0.2.1",
+		"tomasvotruba/unused-public": "^0.3.5",
 		"vimeo/psalm": "^5.15"
 	},
 	"autoload": {
@@ -62,7 +73,8 @@
 			"composer/package-versions-deprecated": true,
 			"dealerdirect/phpcodesniffer-composer-installer": true,
 			"ergebnis/composer-normalize": true,
-			"laminas/laminas-component-installer": true
+			"laminas/laminas-component-installer": true,
+			"phpstan/extension-installer": true
 		},
 		"sort-packages": true
 	},
