--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,6 @@
 		"ergebnis/composer-normalize": "^2.39",
 		"filp/whoops": "^2.15.3",
 		"laminas/laminas-development-mode": "^3.11.0",
-		"lctrs/psalm-psr-container-plugin": "^1.9",
 		"maglnet/composer-require-checker": "^4.7",
 		"mezzio/mezzio-tooling": "^2.8",
 		"phpstan/extension-installer": "^1.3",
@@ -47,7 +46,6 @@
 		"phpstan/phpstan-strict-rules": "^1.5",
 		"phpunit/phpunit": "^10.4.1",
 		"povils/phpmnd": "^3.2",
-		"psalm/plugin-phpunit": "^0.18.4",
 		"rector/rector": "^0.18.5",
 		"roave/security-advisories": "dev-master",
 		"sidz/phpstan-rules": "^0.4.2",
@@ -55,8 +53,7 @@
 		"thecodingmachine/phpstan-strict-rules": "^1.0",
 		"tomasvotruba/cognitive-complexity": "^0.2.2",
 		"tomasvotruba/type-coverage": "^0.2.1",
-		"tomasvotruba/unused-public": "^0.3.5",
-		"vimeo/psalm": "^5.15"
+		"tomasvotruba/unused-public": "^0.3.5"
 	},
 	"autoload": {
 		"psr-4": {
