--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
 		"doctrine/sql-formatter": "^1.1",
 		"ergebnis/composer-normalize": "^2.39",
 		"filp/whoops": "^2.15.3",
+		"itsgoingd/clockwork": "^5.1",
 		"laminas/laminas-development-mode": "^3.11.0",
 		"maglnet/composer-require-checker": "^4.7",
 		"mezzio/mezzio-tooling": "^2.8",
@@ -62,7 +63,8 @@
 	},
 	"autoload-dev": {
 		"psr-4": {
-			"AppTest\\": "test/AppTest/"
+			"MartaTest\\": "test/AppTest/",
+			"MartaDev\\": "dev/"
 		}
 	},
 	"config": {
