Configuraciones adicionales para clockwork

--- a/.devcontainer/xdebug.ini
+++ b/.devcontainer/xdebug.ini
@@ -1,5 +1,5 @@
 zend_extension=/usr/local/lib/php/extensions/no-debug-non-zts-20220829/xdebug.so
-xdebug.mode = develop,debug,coverage
-xdebug.start_with_request = trigger
+xdebug.mode = develop,debug,coverage,profile
+xdebug.start_with_request = default
 xdebug.discover_client_host=1
 xdebug.client_port = 9000
